force-app/main/default/objects/hed__Program_Enrollment__c/fields/Date_Follow_Up_Waitlist_Info__c.field-meta.xml
<CustomField>
    <fullName>Date_Follow_Up_Waitlist_Info__c</fullName>
    <description>Date APS will follow-up with the caretaker</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Follow Up Waitlist Info</label>
    <type>Date</type>
</CustomField>