force-app/main/default/objects/hed__Program_Enrollment__c/fields/Date_POA_Extension_Will_Expire__c.field-meta.xml
<CustomField>
    <fullName>Date_POA_Extension_Will_Expire__c</fullName>
    <description>Date POA Extension will expire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date POA Extension Will Expire</label>
    <type>Date</type>
</CustomField>