force-app/main/default/objects/hed__Program_Enrollment__c/fields/Date_Review_Waitlist_Info__c.field-meta.xml
<CustomField>
    <fullName>Date_Review_Waitlist_Info__c</fullName>
    <description>Deadline for updated documentation</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Review Waitlist Info</label>
    <type>Date</type>
</CustomField>