force-app/main/default/objects/hed__Program_Enrollment__c/fields/DateFirstEnrolledStateSchool__c.field-meta.xml
<CustomField>
    <fullName>DateFirstEnrolledStateSchool__c</fullName>
    <description>When was the student first enrolled in your current state&apos;s school system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DateFirstEnrolledStateSchool</label>
    <type>Date</type>
</CustomField>