force-app/main/default/objects/hed__Program_Enrollment__c/fields/DateFirstEnrolledUSSchool__c.field-meta.xml
<CustomField>
    <fullName>DateFirstEnrolledUSSchool__c</fullName>
    <description>When was the student first enrolled in the U.S. school system</description>
    <encryptionScheme>None</encryptionScheme>
    <label>DateFirstEnrolledUSSchool</label>
    <type>Date</type>
</CustomField>