force-app/main/default/objects/hed__Program_Enrollment__c/fields/DatePORExtensionWillExpire__c.field-meta.xml
<CustomField>
    <fullName>DatePORExtensionWillExpire__c</fullName>
    <description>Date POR Extension will expire</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date POR Extension Will Expire</label>
    <type>Date</type>
</CustomField>