force-app/main/default/objects/hed__Program_Enrollment__c/fields/Days_in_Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Current_Stage__c</fullName>
    <description>Used with the stage field and stage date to determine how many days the student has been in this stage.</description>
    <formula>NOW() - BLANKVALUE(Stage_Date__c, NOW())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Current Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>