force-app/main/default/objects/hed__Program_Enrollment__c/fields/Days_in_Placement_Flag_Reset_Count__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Placement_Flag_Reset_Count__c</fullName>
    <description>DaysinPlacementFlagResetCount</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Days in Placement Flag Reset Count</label>
    <length>10</length>
    <type>Text</type>
</CustomField>