force-app/main/default/objects/hed__Program_Enrollment__c/fields/DaysInPlacementFlagReset__c.field-meta.xml
<CustomField>
    <fullName>DaysInPlacementFlagReset__c</fullName>
    <label>Days In Placement Flag Reset</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Option 1</fullName>
            </value>
            <value>
                <fullName>Option 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>