force-app/main/default/objects/hed__Program_Enrollment__c/fields/Disciplinary_History_Affirmation__c.field-meta.xml
<CustomField>
    <fullName>Disciplinary_History_Affirmation__c</fullName>
    <description>Disciplinary History Affirmation</description>
    <label>Disciplinary History Affirmation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I hereby swear or affirm that my child was</fullName>
            </value>
            <value>
                <fullName>I hereby swear or affirm that my child was not</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>