force-app/main/default/objects/hed__Program_Enrollment__c/fields/DisciplinaryFlagOverride__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryFlagOverride__c</fullName>
    <description>Disciplinary Flag</description>
    <label>Disciplinary Flag Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Pending Review</fullName>
            </value>
            <value>
                <fullName>Withdraw</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>