force-app/main/default/objects/hed__Program_Enrollment__c/fields/DisciplinaryPastActions__c.field-meta.xml
<CustomField>
    <fullName>DisciplinaryPastActions__c</fullName>
    <description>Has this student ever been suspended or expelled from any school?</description>
    <label>Disciplinary Past Actions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes, expelled</fullName>
            </value>
            <value>
                <fullName>Yes, in the process of being expelled</fullName>
            </value>
            <value>
                <fullName>Yes, suspended</fullName>
            </value>
            <value>
                <fullName>Yes, suspended and expelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>