force-app/main/default/objects/hed__Program_Enrollment__c/fields/Discipline_Status__c.field-meta.xml
<CustomField>
    <fullName>Discipline_Status__c</fullName>
    <description>Discipline Status</description>
    <label>Discipline Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>has been expelled</fullName>
            </value>
            <value>
                <fullName>has received a warning</fullName>
            </value>
            <value>
                <fullName>is suspended</fullName>
            </value>
            <value>
                <fullName>has been referred to a restorative justice conference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>