force-app/main/default/objects/hed__Program_Enrollment__c/fields/DistrictStudentResides__c.field-meta.xml
<CustomField>
    <fullName>DistrictStudentResides__c</fullName>
    <label>DistrictStudentResides</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>My district is not listed</fullName>
            </value>
            <value>
                <fullName>Canton</fullName>
            </value>
            <value>
                <fullName>Dedham</fullName>
            </value>
            <value>
                <fullName>Dover</fullName>
            </value>
            <value>
                <fullName>Dover-Sherborn</fullName>
            </value>
            <value>
                <fullName>Framingham</fullName>
            </value>
            <value>
                <fullName>Holliston</fullName>
            </value>
            <value>
                <fullName>Hopkinton</fullName>
            </value>
            <value>
                <fullName>Medfield</fullName>
            </value>
            <value>
                <fullName>Millis</fullName>
            </value>
            <value>
                <fullName>Natick</fullName>
            </value>
            <value>
                <fullName>Needham</fullName>
            </value>
            <value>
                <fullName>Norwood</fullName>
            </value>
            <value>
                <fullName>Sherborn</fullName>
            </value>
            <value>
                <fullName>Walpole</fullName>
            </value>
            <value>
                <fullName>Wayland</fullName>
            </value>
            <value>
                <fullName>Westwood</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>