force-app/main/default/objects/hed__Program_Enrollment__c/fields/Document_Extension_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Extension_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Document Extension Date</label>
    <type>DateTime</type>
</CustomField>