force-app/main/default/objects/hed__Program_Enrollment__c/fields/Document_Submission_Date_Override__c.field-meta.xml
<CustomField>
    <fullName>Document_Submission_Date_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Submission Date Override</label>
    <type>Checkbox</type>
</CustomField>