force-app/main/default/objects/hed__Program_Enrollment__c/fields/DocumentHandler_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>DocumentHandler_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who last viewed this student&apos;s Enrollment documents</description>
    <label>Last Document Handler Enrollment</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments2</relationshipName>
    <type>Lookup</type>
</CustomField>