force-app/main/default/objects/hed__Program_Enrollment__c/fields/DocumentHandler_Placement__c.field-meta.xml
<CustomField>
    <fullName>DocumentHandler_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who last viewed this student&apos;s Placement documents</description>
    <label>Last Document Handler Placement</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments3</relationshipName>
    <type>Lookup</type>
</CustomField>