force-app/main/default/objects/hed__Program_Enrollment__c/fields/DocumentUploadDate__c.field-meta.xml
<CustomField>
    <fullName>DocumentUploadDate__c</fullName>
    <description>Last Document Upload Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Document Upload Date</label>
    <type>DateTime</type>
</CustomField>