force-app/main/default/objects/hed__Program_Enrollment__c/fields/Electives_Eligibility_Override__c.field-meta.xml
<CustomField>
    <fullName>Electives_Eligibility_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow the student to take electives</description>
    <label>Electives Eligibility Override</label>
    <type>Checkbox</type>
</CustomField>