force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligibility_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Contact_Date__c</fullName>
    <description>Eligibility Contact Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Contact Date</label>
    <type>Date</type>
</CustomField>