force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligibility_Contact_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Contact_Outcome__c</fullName>
    <description>Eligibility Contact Outcome</description>
    <label>Eligibility Contact Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Caretaker to submit documentation</fullName>
            </value>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>Notified</fullName>
            </value>
            <value>
                <fullName>Pending review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>