force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligibility_Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Contact_Type__c</fullName>
    <description>Eligibility Contact Type</description>
    <label>Eligibility Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Answered call</fullName>
            </value>
            <value>
                <fullName>Sent WebMail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>