force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligibility_Future_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Future_Contact_Date__c</fullName>
    <description>Future Contact Date</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Future Contact Date</label>
    <type>Date</type>
</CustomField>