force-app/main/default/objects/hed__Program_Enrollment__c/fields/EligibilityFlag__c.field-meta.xml
<CustomField>
    <fullName>EligibilityFlag__c</fullName>
    <description>Eligibility Flag</description>
    <label>Eligibility Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>