force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligible_For_Lottery_Sibling__c.field-meta.xml
<CustomField>
    <fullName>Eligible_For_Lottery_Sibling__c</fullName>
    <description>Lottery exempt based on enrolled sibling(s)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligible For Lottery Sibling</label>
    <type>TextArea</type>
</CustomField>