force-app/main/default/objects/hed__Program_Enrollment__c/fields/Eligible_for_re_enrollment__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_re_enrollment__c</fullName>
    <label>Eligible for re-enrollment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>