force-app/main/default/objects/hed__Program_Enrollment__c/fields/ELLFlag__c.field-meta.xml
<CustomField>
    <fullName>ELLFlag__c</fullName>
    <description>Flag to mark a student&apos;s potential as an English Learner</description>
    <encryptionScheme>None</encryptionScheme>
    <label>ELL Flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>