force-app/main/default/objects/hed__Program_Enrollment__c/fields/End_Date_of_Disciplinary_Action__c.field-meta.xml
<CustomField>
    <fullName>End_Date_of_Disciplinary_Action__c</fullName>
    <description>End date of the most recent disciplinary action</description>
    <encryptionScheme>None</encryptionScheme>
    <label>End Date of Disciplinary Action</label>
    <type>Date</type>
</CustomField>