force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrDoc_Oldest_Doc_Timestamp_Enr__c.field-meta.xml
<CustomField>
    <fullName>EnrDoc_Oldest_Doc_Timestamp_Enr__c</fullName>
    <description>Oldest Enrollment document submitted on</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EnrDoc Oldest Doc Timestamp Enr</label>
    <type>DateTime</type>
</CustomField>