force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrDoc_Submitted_Filter__c.field-meta.xml
<CustomField>
    <fullName>EnrDoc_Submitted_Filter__c</fullName>
    <description>Does this user have any Enrollment files with submit status equal to &quot;Submitted&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Secondary Priority for Review</inlineHelpText>
    <label>EnrDoc Submitted Filter</label>
    <type>TextArea</type>
</CustomField>