force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_Interest_Level__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_Interest_Level__c</fullName>
    <description>Interest Level</description>
    <label>EnrInt Interest Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>