force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_ManagementDirectives__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_ManagementDirectives__c</fullName>
    <description>Management Directives</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EnrInt Management Directives</label>
    <length>250</length>
    <type>Text</type>
</CustomField>