force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_Preferred_Contact_Method__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_Preferred_Contact_Method__c</fullName>
    <label>EnrInt Preferred Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Webmail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>