force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_PreferredContactTime__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_PreferredContactTime__c</fullName>
    <label>EnrInt_PreferredContactTime</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Afternoon</fullName>
            </value>
            <value>
                <fullName>Evening</fullName>
            </value>
            <value>
                <fullName>Morning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>