force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_PrimaryBucket__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_PrimaryBucket__c</fullName>
    <description>Intervention Primary Bucket</description>
    <label>EnrInt Primary Bucket</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Academic Placement Services</fullName>
            </value>
            <value>
                <fullName>Enrollment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>