force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_Status__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_Status__c</fullName>
    <description>Engagement Status</description>
    <label>EnrInt Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Deprioritized</fullName>
            </value>
            <value>
                <fullName>Exclude from export</fullName>
            </value>
            <value>
                <fullName>Non-Responsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>