force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrInt_Status_Reasons__c.field-meta.xml
<CustomField>
    <fullName>EnrInt_Status_Reasons__c</fullName>
    <description>Engagement Status Reason(s)</description>
    <label>EnrInt Status Reasons</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Documentation</fullName>
            </value>
            <value>
                <fullName>Incorrect Contact Information</fullName>
            </value>
            <value>
                <fullName>Lack of Account Activity</fullName>
            </value>
            <value>
                <fullName>Language Barrier</fullName>
            </value>
            <value>
                <fullName>Undecided</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>