force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrlnt_GPA_Range__c.field-meta.xml
<CustomField>
    <fullName>Enrlnt_GPA_Range__c</fullName>
    <label>Enrlnt GPA Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2.5 or Above</fullName>
            </value>
            <value>
                <fullName>Below 2.5</fullName>
            </value>
            <value>
                <fullName>Unsure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>