force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrlntPref_Addl_Info__c.field-meta.xml
<CustomField>
    <fullName>EnrlntPref_Addl_Info__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EnrlntPref Addl Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>