force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrlntPref_Info__c.field-meta.xml
<CustomField>
    <fullName>EnrlntPref_Info__c</fullName>
    <label>EnrlntPref Info</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biological or adopted sibling of a student currently attending TECCA.</fullName>
            </value>
            <value>
                <fullName>Students residing in rural communities</fullName>
            </value>
            <value>
                <fullName>Students in institutionalized settings</fullName>
            </value>
            <value>
                <fullName>Students who are gifted and talented</fullName>
            </value>
            <value>
                <fullName>Students who are over-age for their grade</fullName>
            </value>
            <value>
                <fullName>Students who are pregnant or who have a child</fullName>
            </value>
            <value>
                <fullName>Students who feel bullied or who are out of school due to other safety concerns</fullName>
            </value>
            <value>
                <fullName>Students who have been expelled</fullName>
            </value>
            <value>
                <fullName>Students who have or are at risk of dropping out</fullName>
            </value>
            <value>
                <fullName>Students who seek academic work not available in their school</fullName>
            </value>
            <value>
                <fullName>Students with disabilities</fullName>
            </value>
            <value>
                <fullName>Students with medical needs requiring a home or hospital setting</fullName>
            </value>
            <value>
                <fullName>Students with unusual needs requiring a flexible schedule</fullName>
            </value>
            <value>
                <fullName>None of these situations apply to my student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>