force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enroll_Over_Four_Students_Override__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Over_Four_Students_Override__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Over Four Students Override</label>
    <type>TextArea</type>
</CustomField>