force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enroll_Postpone_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Postpone_Contact__c</fullName>
    <description>Enrollment Postpone Outbound Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Postpone Contact</label>
    <type>Date</type>
</CustomField>