force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enroll_Postpone_Contact_Reason__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Postpone_Contact_Reason__c</fullName>
    <description>Reason for Enrollment Postpone Outbound Contact</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Postpone Contact Reason</label>
    <type>TextArea</type>
</CustomField>