force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enroll_Process_Wait_Time_Date_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Process_Wait_Time_Date_Stamp__c</fullName>
    <description>Enrollment Process Waitlist Time/Date Stamp</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enroll Process Wait Time Date Stamp</label>
    <type>DateTime</type>
</CustomField>