force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrolled_Contact_Summary__c.field-meta.xml
<CustomField>
    <fullName>Enrolled_Contact_Summary__c</fullName>
    <description>Enrolled Contact Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrolled Contact Summary</label>
    <type>TextArea</type>
</CustomField>