force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrollment_Future_Contact_Date__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Future_Contact_Date__c</fullName>
    <description>Enrollment Future Contact Date (to be used by Enrollment only)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Future Contact Date</label>
    <type>Date</type>
</CustomField>