force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrollment_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enrollment Specialist</description>
    <label>Enrollment Specialist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Program_Enrollments4</relationshipName>
    <type>Lookup</type>
</CustomField>