force-app/main/default/objects/hed__Program_Enrollment__c/fields/Enrollment_Type__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Type__c</fullName>
    <label>Enrollment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial Enrollment</fullName>
                <default>true</default>
                <label>Initial Enrollment</label>
            </value>
            <value>
                <fullName>Re-enrolling student</fullName>
            </value>
            <value>
                <fullName>Returning Student</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>