force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentCallBack__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentCallBack__c</fullName>
    <description>Enrollment Call Back</description>
    <label>Enrollment Call Back</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Attempted</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Requested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>