force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentCallBackNotes__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentCallBackNotes__c</fullName>
    <description>Enrollment Notes</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Call Back Notes</label>
    <type>TextArea</type>
</CustomField>