force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentCallBackTimestamp__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentCallBackTimestamp__c</fullName>
    <description>Date and Time Enrollment Call Back was Requested</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Call Back Timestamp</label>
    <type>DateTime</type>
</CustomField>