force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentContactSummary__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentContactSummary__c</fullName>
    <description>Enrollment Contact Summary</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Contact Summary</label>
    <type>TextArea</type>
</CustomField>