force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentDocs_HardCopyCreated__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDocs_HardCopyCreated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cumulative Hard Copy File Created</description>
    <label>Enrollment Docs Hard Copy Created</label>
    <type>Checkbox</type>
</CustomField>