force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentDocs_HardCopyDate__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentDocs_HardCopyDate__c</fullName>
    <description>Date Created</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Enrollment Docs Hard Copy Date</label>
    <type>Date</type>
</CustomField>