force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollmentSpecialistContactReq__c.field-meta.xml
<CustomField>
    <fullName>EnrollmentSpecialistContactReq__c</fullName>
    <label>Enrollment Specialist Contact Required</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>