force-app/main/default/objects/hed__Program_Enrollment__c/fields/EnrollOutboundContactPrefer__c.field-meta.xml
<CustomField>
    <fullName>EnrollOutboundContactPrefer__c</fullName>
    <description>Enrollment Outbound Contact Preference</description>
    <label>Enroll Outbound Contact Prefer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Exclude from Email Campaigns</fullName>
            </value>
            <value>
                <fullName>No e-IVR Only</fullName>
            </value>
            <value>
                <fullName>No Enrollment Contact</fullName>
            </value>
            <value>
                <fullName>No Enrollment postcards/letters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>