force-app/main/default/objects/hed__Program_Enrollment__c/fields/Ent_Age_Elg_Over_Rev_Count_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Ent_Age_Elg_Over_Rev_Count_Hidden__c</fullName>
    <label>Ent Age Elg Over Rev Count Hidden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>