force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntAgeElgOverRevCount__c.field-meta.xml
<CustomField>
    <fullName>EntAgeElgOverRevCount__c</fullName>
    <formula>If(
NOT(Has_Open_Opportunity__c) || 
( TEXT(EntranceAgeEligibilityOverride__c) = &apos;Released&apos;) || 
(ISBLANK(EntAgeEliOvrDate__c)), NULL
, 
TODAY() - EntAgeEliOvrDate__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EntAgeElgOverRevCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>