force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntAgeEliOvrDate__c.field-meta.xml
<CustomField>
    <fullName>EntAgeEliOvrDate__c</fullName>
    <description>Date of last Entrance Age Eligibility Override update</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Date of last update to Entrance Age Elig</label>
    <type>Date</type>
</CustomField>