force-app/main/default/objects/hed__Program_Enrollment__c/fields/Entrance_Age_Review_Description__c.field-meta.xml
<CustomField>
    <fullName>Entrance_Age_Review_Description__c</fullName>
    <description>Entrance Age Pending Review Description</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Entrance Age Review Description</label>
    <type>TextArea</type>
</CustomField>