force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntranceAgeElgOverrideReview__c.field-meta.xml
<CustomField>
    <fullName>EntranceAgeElgOverrideReview__c</fullName>
    <description>Entrance Age Eligibility Review</description>
    <encryptionScheme>None</encryptionScheme>
    <label>EntranceAgeElgOverrideReview</label>
    <type>TextArea</type>
</CustomField>