force-app/main/default/objects/hed__Program_Enrollment__c/fields/EntranceAgeEligibility__c.field-meta.xml
<CustomField>
    <fullName>EntranceAgeEligibility__c</fullName>
    <description>Entrance Age Eligibility Flag</description>
    <label>Entrance Age Eligibility</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Eligible</fullName>
            </value>
            <value>
                <fullName>NOT ELIGIBLE-No Birthdate</fullName>
            </value>
            <value>
                <fullName>Ineligible</fullName>
            </value>
            <value>
                <fullName>Too young</fullName>
            </value>
            <value>
                <fullName>Too old</fullName>
            </value>
            <value>
                <fullName>Too young - other options</fullName>
            </value>
            <value>
                <fullName>Possibly too old</fullName>
            </value>
            <value>
                <fullName>Too old - other options</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>